# tree-sitter-nextflow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  grammar.js  package.json  pyproject.toml  setup.py  sgconfig.yml  test_closure.nf  test_simple.nf  tree-sitter.json
.claude/: current.md  settings.json
.claude/notes/: architecture-decisions.md  development-roadmap.md  reference-grammar-analysis.md  strict-syntax.md  string-interpolation-debug.md  string-interpolation-implementation.md  testing-strategies.md
.cursor/rules/: build-and-bindings.mdc  grammar-development.mdc  nextflow-language-features.mdc  project-overview.mdc  testing-guide.mdc
.github/workflows/: ast-grep-distribution.yml
docs/: ast-grep-outline.md  ast-grep-patterns.md  ast-grep-testing-results.md
docs/ast-grep/: README.md  patterns.md  testing-results.md
outline/: nextflow.yml
queries/: highlights.scm  injections.scm  tags.scm
rules/: channel-into-deprecated.yml  deprecated-channel-from.yml  hardcoded-paths.yml  process-lowercase-name.yml
scripts/: install-ast-grep.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: binary_expressions.txt  channel_operations.txt  closures.txt  control_structures.txt  process_definition.txt  script_injection.txt  strict_syntax_v2.txt  string_interpolation.txt  string_interpolation_debug.txt  variable_declarations.txt  workflow_definition.txt
test/corpus/advanced/: closures.txt  (+8 more)
test/highlight/: functions.nf  keywords.nf  operators.nf  simple.nf  strings.nf
test/tags/: definitions.nf  references.nf
(+13 files in other folders)
