[package]
name = "tree-sitter-nextflow"
description = "Nextflow grammar for tree-sitter"
version = "0.1.0"
authors = [
  "Edmund Miller <edmund@nf-co.re>",
  "Ben Sherman <bentshermann@gmail.com",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nextflow"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/edmundmiller/tree-sitter-nextflow"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.5"
